enabled multiple target frameworks (.NET 4.6.2, .NET 8)

--- a/src/Only/Only.csproj
+++ b/src/Only/Only.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFrameworks>net462;net8.0-windows</TargetFrameworks>
+    <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -9,7 +10,7 @@
 
   <PropertyGroup>
     <Title>Only</Title>
-    <Description>Single instance app support library</Description>
+    <Description>Single instance app support library for WPF</Description>
     <PackageId>Only</PackageId>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -21,5 +22,14 @@
     <PackageReleaseNotes></PackageReleaseNotes>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Reference Include="System.Deployment" Condition="$(TargetFramework) == 'net462'" />
+    <Reference Include="System.Runtime.Remoting" Condition="$(TargetFramework) == 'net462'" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
 
 </Project>
